# swagger.json
@@ -278,6 +278,63 @@
           }
         }
       }
+    },
+    "/api/picture": {
+      "post": {
+        "summary": "Edit user picture",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/EditPictureRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The picture removed successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EditPictureResponse"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "The picture changed successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EditPictureResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -296,6 +353,17 @@
         },
         "required": ["username", "score"]
       },
+      "EditPictureRequest": {
+        "type": "object",
+        "properties": {
+          "picture": {
+            "type": "string",
+            "description": "Edit picture",
+            "format": "binary"
+          }
+        },
+        "required": []
+      },
       "CreateHistoryResponse": {
         "type": "object",
         "properties": {
@@ -309,6 +377,16 @@
           }
         },
         "required": ["status", "message"]
+      },
+      "EditPictureResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "example": "The picture changed successfully"
+          }
+        },
+        "required": ["message"]
       },
       "UserRankRequest": {
         "type": "object",
